defaults/k8s/deploy-adw.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: adw
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: adw
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: cloud.google.com/gke-preemptible
      #           operator: Exists
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: component
      #           operator: In
      #           values:
      #           - adw
      #       topologyKey: "kubernetes.io/hostname"
      containers:
      - name: service
        image: {NAME}:dev
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        # resources:
        #   limits:
        #     cpu: 1
        #     memory: 2G
        #   requests:
        #     cpu: 1
        #     memory: 2G
        volumeMounts:
          - mountPath: /app/src/image.binary.runfiles/research/config
            subPath: config
            name: data
          - mountPath: /app/src/image.binary.runfiles/research/resources
            subPath: resources
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adw-data-pvc
          readOnly: true
