defaults/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{NAME}"
  labels:
    component: "{NAME}"
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8081"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 8081
      protocol: TCP
      targetPort: metrics
  selector:
    component: "{NAME}"
